<resources>
    <string name="app_name">QChat</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="web_client_id" translatable="false">web client id from google developers console</string>
    <string name="signin">Sign-in</string>
    <string name="nav_search">Search</string>
    <string name="share">Share</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_messages">Messages</string>
    <string name="settings_exit">EXIT</string>
    <string name="enter_message">Enter message</string>
</resources>
